prusti-tests/tests/parse/ui/after_expiry_fail.stderr
error: expected `,`
 --> $DIR/after_expiry_fail.rs:8:19
  |
8 | #[after_expiry_if(a)]
  |                   ^

error: expected `,`
  --> $DIR/after_expiry_fail.rs:11:24
   |
11 | #[after_expiry_if(a => a)]
   |                        ^

error: unexpected token
  --> $DIR/after_expiry_fail.rs:14:17
   |
14 | #[after_expiry(a, a)]
   |                 ^

error: unexpected token
  --> $DIR/after_expiry_fail.rs:17:22
   |
17 | #[after_expiry(a => a, a)]
   |                      ^

error: aborting due to 4 previous errors

